Fixed layout issue when only one image was displayed

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,20 +8,21 @@ body {
 
 /* Main layout styles------------------------------*/
 .main-wrapper {
-    max-width: 980px;
+    max-width: 960px;
     margin: auto;
 }
 
-#gridGallery {
+#grid {
     display: grid;
-    margin: 0 20px;
+    margin: 0 30px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 30px;
+    gap: 20px;
 }
 
 img{
-    width: 100%;
+    width: 200px;
     display: block;
+    margin: auto;
 }
 
 
